<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Walts &amp; The Spiders</string>
    <string name="you_won">You Won!</string>
    <string name="game_over">Game Over</string>
    <string name="achievement">Achievement</string>
    <string name="level">Level</string>
    <string name="points">Points</string>
    <string name="ranking">Ranking</string>
    <string name="close">Close</string>
    <string name="go">Go!</string>
    <string name="time">Time</string>
    <string name="next">Next</string>
    <string name="start_new_game">New Game</string>
    <string name="board_safe_zone">SAFE ZONE</string>
    <string name="board_paused">P A U S E D</string>
    <string name="board_game_over">G A M E   O V E R</string>
    <string name="are_you_ready">Are you ready for the next level?</string>
    <string name="you_have_been_bitten">You\'ve been bitten!</string>
    <string name="you_got_to_level_and_made">You got to Level %1$s and made %2$s point(s).</string>
    <string name="game_paused">Game paused</string>
    <string name="what_happened">What happened? Need to go to the toilet?</string>
    <string name="resume">Resume game</string>
    <string name="app_id">1657688597838026</string>
    <string name="logout_facebook">Unregister Facebook account</string>
    <string name="back">Back</string>
    <string name="you">You</string>
    <string name="name">Name</string>
    <string name="connection_problem" />
    <string name="position">Position</string>
    <string name="review_question">Review question</string>
    <string name="leave_game">Leave game</string>
    <string name="you_are_about_to_leave">You are about the leave this game. Would you like to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="instructions">Game instructions</string>
    <string name="game_plot_1">Lead Walts to the gemstone whose color corresponds to the solution of each question.\n\nWith the stone in hands, return it to the center of the board.</string>
    <string name="game_plot_2">You\'ll earn 50 coins for each solved question, but be aware that rescuing the wrong gemstone will coast you 25 coins.</string>
    <string name="game_plot_3">Be very careful with the spiders: a single bite and Walts is gone!\n\nLucky you they fear water and don\'t go nearby the fountain.</string>
    <string name="game_plot_4">Touch the screen edges to guide Walts through the labyrinth.</string>
    <string name="game_plot_5">That\' all!\n\nHow much enigmas can you solve? Link your Facebook account to compete in the global ranking.</string>
    <string name="do_not_show_again">Do not show this again</string>
    <string name="prior">Prior</string>
    <string name="skip">Skip</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="facebook_cancel">Authentication process canceled.</string>
    <string name="facebook_error">There was a problem during Facebook authentication process.</string>
</resources>
