<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:paddingBottom="25dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.carr3r.waltsnspiders.styled.StyledTextview
            android:textAlignment="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="18sp"
            android:background="@drawable/rounded_title"
            android:textColor="@android:color/white"
            android:text="@string/instructions" />

        <com.carr3r.waltsnspiders.styled.StyledTextview
            android:id="@+id/display"
            android:lineSpacingExtra="5dp"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:background="@drawable/gradient_background"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:padding="15dp"
            android:text=""/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.carr3r.waltsnspiders.styled.StyledButton
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/priorBtn"
                android:text="@string/prior"
                android:textAlignment="center"
                android:textSize="14sp"
                android:background="@drawable/rounded_corners"
                android:textColor="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />

            <com.carr3r.waltsnspiders.styled.StyledButton
                android:layout_weight="1"
                android:id="@+id/nextBtn"
                android:text="@string/next"
                android:textAlignment="center"
                android:textSize="14sp"
                android:background="@drawable/rounded_corners"
                android:textColor="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />

            <com.carr3r.waltsnspiders.styled.StyledButton
                android:layout_weight="1"
                android:id="@+id/skipBtn"
                android:text="@string/skip"
                android:textAlignment="center"
                android:textSize="14sp"
                android:background="@drawable/rounded_corners"
                android:textColor="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />
        </LinearLayout>

        <com.carr3r.waltsnspiders.styled.StyledCheckbox
            android:id="@+id/do_not_show"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:text="@string/do_not_show_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.appbrain.AppBrainBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>