<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.carr3r.waltsnspiders.styled.StyledTextview
            android:minWidth="550dp"
            android:id="@+id/description"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/rounded_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/game_paused" />

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/gradient_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.carr3r.waltsnspiders.styled.StyledTextview
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="@string/what_happened"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.carr3r.waltsnspiders.styled.StyledButton
                android:id="@+id/review"
                android:layout_weight="1"
                android:text="@string/review_question"
                android:textAlignment="center"
                android:textSize="14sp"
                android:background="@drawable/rounded_corners"
                android:textColor="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />

            <com.carr3r.waltsnspiders.styled.StyledButton
                android:layout_weight="1"
                android:id="@+id/resumeButton"
                android:text="@string/resume"
                android:textAlignment="center"
                android:textSize="14sp"
                android:background="@drawable/rounded_corners"
                android:textColor="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="35dp" />
        </LinearLayout>
    </LinearLayout>

    <com.appbrain.AppBrainBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>