<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.carr3r.waltsnspiders.styled.StyledTextview
            android:id="@+id/description"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@drawable/rounded_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:text="@string/you_won" />

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/gradient_background"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <com.carr3r.waltsnspiders.styled.StyledTextview
                android:layout_gravity="center_vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="@string/are_you_ready"/>

        </LinearLayout>
        <com.carr3r.waltsnspiders.styled.StyledButton
            android:id="@+id/closeButton"
            android:text="@string/next"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:textColor="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="35dp" />
    </LinearLayout>

    <com.appbrain.AppBrainBanner
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>